# data-viento

./: README.md
apps/server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  login_response.json  pyproject.toml
apps/server/db/: schema.sql
apps/server/scripts/: crontab.txt  run_cleanup.sh  run_weather_current.sh  run_weather_daily.sh  run_weather_hourly.sh  setup_cron.sh  wsl_startup.sh
apps/server/scripts/air_quality/: run_air_quality_current.sh  run_air_quality_hourly.sh
apps/server/scripts/cleanups/: run_cleanup_air.sh  run_cleanup_marine.sh  run_cleanup_satellite.sh  run_cleanup_weather.sh
apps/server/scripts/marine/: run_marine_current.sh  run_marine_daily.sh  run_marine_hourly.sh
apps/server/scripts/satellite/: run_satellite_daily.sh
apps/server/scripts/weather/: run_weather_current.sh  run_weather_daily.sh  run_weather_hourly.sh
apps/server/src/: config.py  main.py
apps/server/src/api/: __init__.py  base_client.py  open_meteo_client.py
apps/server/src/constants/: __init__.py  default_locations.py  open_meteo_params.py
apps/server/src/db/: __init__database.py  database.py  schema.txt
apps/server/src/middleware/: auth_middleware.py
apps/server/src/models/: __init__.py  air_quality_models.py  base_models.py  climate_models.py  marine_models.py  open_meteo_models.py  satellite_models.py  users.py  weather_models.py
apps/server/tests/: ai_chat_test.py  test_ai_service.py  test_air_quality_service.py  test_database.py  test_marine_service.py  test_open_meteo_client.py  test_satellite_service.py  test_weather_service.py
(+53 files in other folders)
