[project]
name = "data-viento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.117.1",
    "mysql-connector-python>=9.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.36.0",
]
