[project]
name = "data-viento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.117.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "mysql-connector-python>=9.5.0",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "statistics>=1.0.3.5",
    "uvicorn[standard]>=0.36.0",
]
